--- a/templates/inner-page.html
+++ b/templates/inner-page.html
@@ -38,7 +38,7 @@
         header {
             background-color: rgba(0, 0, 0, 0.5);
             color: white;
-            padding: 10px 0;
+            padding: 10px ;
             text-align: center;
             position: relative;
         }
@@ -108,7 +108,7 @@
             border-radius: 7px;
             cursor: pointer;
             color: white;
-            background-color: rgb(18, 14, 13);
+            background-color: rgb(4, 0, 37);
             font-family: 'Open Sans', sans-serif;
             font-weight: 600;
             transition: all 0.3s ease;
@@ -204,10 +204,24 @@
         <main style="flex: 1;">
             <section class="predict-section">
                 <h2>Prediction Result</h2>
-                <p>The galaxy is classified as: <b>{{ prediction }}</b> </p>
-                <a href="/" class="btn">Go Back</a>
+                <p style="font-size: 18px; line-height: 1.6;">
+                    The galaxy is classified as:
+                    <b style="
+    color: rgb(255, 255, 255); 
+    font-size: 30px; 
+    text-shadow: 
+        1px 1px 0 #000000, 
+        -1px -1px 0 #000000,  
+        1px -1px 0 #000000, 
+        -1px 1px 0 #000000;">
+                        {{ prediction }}
+                    </b>
+
+                </p>
+                <a href="/" class="btn" style="color: #ffffff; text-decoration: underline;">Go Back</a>
             </section>
         </main>
+
         <footer id="contact">
             <div class="footer-content">
                 <div class="contact-icons">
