--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     
         body {
             font-family: 'Open Sans', sans-serif;
-            background: url('/static/images/gal.avif') no-repeat center center fixed;
+            background: url('/static/images/gal.jpg') no-repeat center center fixed;
             background-size: cover;
             color: white;
             margin: 0;
