--- a/templates/inner-page.html
+++ b/templates/inner-page.html
@@ -17,7 +17,7 @@
         body {
             font-family: 'Open Sans', sans-serif;
             overflow-x: hidden;
-            background: url('/static/images/gal.jpg') no-repeat center center fixed;
+            background: url('/static/images/galaxy.avif') no-repeat center center fixed;
             background-size: cover;
             color: white;
             margin: 0;
