--- a/templates/inner-page.html
+++ b/templates/inner-page.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="View your galaxy classification prediction results.">
     <title>Prediction Result</title>
     <style>
         html,
@@ -59,9 +60,11 @@
 
         .navb {
             display: flex;
-            justify-content: center;
+            height: 70px;
+            font-family: 'Open Sans', sans-serif;
+            color: #fff;
             list-style: none;
-            padding: 0;
+            padding: 25px;
             margin: 0;
         }
 
@@ -180,6 +183,9 @@
             .predict-section {
                 padding: 10px;
                 width: 95%;
+            }
+            .header{
+                font-size: 32px;
             }
         }
     </style>
